--- a/.gitignore
+++ b/.gitignore
@@ -160,8 +160,8 @@ cython_debug/
 #.idea/
 
 # Ignore article data
-data/raw
-data/test
+backend/data/raw
+backend/data/test
 data_old/
 recommendations/
 web/
